--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h2>I'm a web developer</h2>
 <hr>
 <a href="/public/movie-ranking.html"><h3>My Top Kdramas Project</h3></a>
-<img src="/assets/images/My top kdrama.png" alt="top kdrama" width="200px">
+<img src="/assets/images/My-top-kdrama.png" alt="top kdrama" width="200px">
 
 <a href="/public/birthday-invite.html"><h3>Birthday Invite Project</h3></a>
-<img src="/assets/images/Birthday invite.png" alt="Bday invite" width="200px">
+<img src="/assets/images/Birthday-invite.png" alt="Bday invite" width="200px">
 <hr>
 <a href="/public/about.html">About me</a>
 <a href="/public/contact.html">Contact me</a>
